Center infogr box in ‘Tuottajavastuu’ hero

--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -12,7 +12,7 @@ title: Tuottajavastuu |
 		<p class="slogan">Kierrättäjän paras ystävä löytyy Paperinkeräykseltä.</p>
 
 		<div class="row">
-		<div class="columns small-12 medium-6 link-box">
+		<div class="columns small-12 link-box">
 <a href="/assets/pdf/Paperinkerays_infogr_tuottajavastuu.pdf" target="_blank">
 
 		<div class="link-box-content infografiikka">
