ALT texts for images

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -50,7 +50,7 @@ title: Jätehuolto |
 	<div class="row">
 
 	<div class="columns small-12 medium-6 content-image">
-		<img src="assets/img/markus_narhi_jatehuolto.jpg">
+		<img src="assets/img/markus_narhi_jatehuolto.jpg" alt="Markus Närhi">
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
