--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -50,7 +50,7 @@ title: Tietoturva |
 	<div class="row">
 
 	<div class="columns small-12 medium-6 content-image">
-		<img src="assets/img/jenni_kivi_tietoturva.jpg">
+		<img src="assets/img/jenni_kivi_tietoturva.jpg" alt="Jenni Kivi">
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
