--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -49,7 +49,7 @@ title: Kuormalava |
 	<div class="row">
 
 	<div class="columns small-12 medium-6 content-image">
-		<img src="assets/img/timo_kaikkonen_kuormalavat.jpg">
+		<img src="assets/img/timo_kaikkonen_kuormalavat.jpg" alt="Timo Kaikkonen">
 	</div><!--/content-image-->
 
 	<div class="columns small-12 medium-6 content-text">
