Changed some texts

--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -96,7 +96,7 @@ title: Jätehuolto |
 <div class="row">
 
 	<div class="columns small-12">
-	<h3 class="avainluvut-heading">Avainlukuja toimialasta</h3>
+	<h3 class="avainluvut-heading">Vuosi numeroina</h3>
 	</div>
 
 	<div class="page-avainluvut">
