--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -91,7 +91,7 @@ title: Kuormalava |
 <div class="row">
 
 	<div class="columns small-12">
-	<h3 class="avainluvut-heading">Avainlukuja toimialasta</h3>
+	<h3 class="avainluvut-heading">Vuosi numeroina</h3>
 	</div>
 
 	<div class="page-avainluvut">
