--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -97,7 +97,7 @@ Tehtävämme on myös pitää asiakas kärryillä prosessin kulusta. Haluamme sa
 <div class="row">
 
 	<div class="columns small-12">
-	<h3 class="avainluvut-heading">Avainlukuja toimialasta</h3>
+	<h3 class="avainluvut-heading">Vuosi numeroina</h3>
 	</div>
 
 	<div class="page-avainluvut">
