--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -67,7 +67,7 @@ title: Tuottajavastuu |
 <div class="row">
 
 	<div class="columns small-12">
-	<h3 class="avainluvut-heading">Avainlukuja toimialasta</h3>
+	<h3 class="avainluvut-heading">Vuosi numeroina</h3>
 	</div>
 
 	<div class="page-avainluvut">
