--- a/src/pages/paakirjoitus.html
+++ b/src/pages/paakirjoitus.html
@@ -40,7 +40,7 @@ title: Pääkirjoitus |
 
 <p>Digitalisaatio on vähentänyt merkittävästi graafisten painopapereiden kulutusta kuluneen vuosikymmenen aikana. Tämä kehitys on luonnollisesti näkynyt keräyspaperimäärissä. Nyt alenema näyttäisi kuitenkin loiventuneen. Toivottavasti talouden kasvusuunta jatkuu ja keräysverkostollemme on edelleen tarvetta.</p>
 
-<p>Jotta voimme vastata vähentyneen keräysmäärän aiheuttamiin kustannuspaineisiin, olemme aloittamassa uudenlaista keräysmallikokeilua. Tässä kohteenamme ovat haja-asutusalueet, jossa teemme yhteistyötä Postin päivittäisjakelun kanssa. Tavoitteenamme on yhdistää postiautojen paluulogistiikkaan keräyspaperin talteenotto. Kaksi kärpästä yhdellä iskulla, ja sen lisäksi pienempi hiilijalanjälki.</p>
+<p>Jotta voimme vastata vähentyneen keräysmäärän aiheuttamiin kustannuspaineisiin, kehitämme yhteistyössä kumppaniemme kanssa entistäkin tehokkaampaa keräysmallia. Tämä on tärkeää etenkin haja-asutusalueella, jossa tehokkaammalla toiminnalla vähennämme tarvittavien kuljetuskertojen määrää yhdistämällä noutoja. Näin nappaamme kaksi kärpästä yhdellä iskulla sekä pienennämme merkittävästi hiilijalanjälkeämme.</p>
 
 <p>Hyvää ja lämmintä kesäkautta</p>
 
