--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -33,7 +33,7 @@ title: Tuottajavastuu |
 <div class="row">
 
 <div class="columns small-12">
-	<h1>Kumppanuudella kutistuvia volyymeja vastaan</h1>
+	<h1>Tuottajayhteisöjen arvostama kumppani</h1>
 </div>
 
 	<div class="row">
@@ -44,15 +44,24 @@ title: Tuottajavastuu |
 
 	<div class="columns small-12 medium-6 content-text">
 
-<p>Kuluttajapakkauksia koskeva lainsäädäntö uudistui vuoden 2016 alussa. Samalla kartongin aluekeräysvastuu siirtyi Paperinkeräykseltä Suomen Pakkauskierrätys Rinki Oy:lle. Keräyspaperin kuluttajakeräykseen uudistus ei vaikuttanut: Paperinkeräys vastaa yhä aluekierrätyspisteiden paperinkeräysastioista ja niiden tyhjentämisestä.</p> 
+<p>Suomen lainsäädäntö asettaa yrityksille ja yhteisöille velvoitteet huolehtia syntyvän jätteen kierrätyksestä ja hyötykäytöstä. Tuottajan velvollisuus huolehtia markkinoille luovuttamiensa tuotteiden ja niistä syntyvän jätteen uudelleenkäytön, hyödyntämisen ja muun jätehuollon järjestämisestä sekä tästä aiheutuvista kustannuksista.</p>
 
-<p>Uusi jätelaki edellyttää, että jokaiseen taajamaan sijoitetaan aluekeräyspiste kuluttajapakkauksille ja kotikeräyspaperille. Paperinkeräys ja Rinki vastaavat yhdessä pisteiden kunnossapidosta, siivouksesta ja hallinnoinnista. Yhdessä kehitämme myös verkostoa entistä paremmaksi muun muassa synergiahyötyjen näkökulmasta. Samalla keräyspisteiden määrä vähenee noin puoleen aiemmasta 6 700:sta. Keskittäminen tuo tehoja logistiikkaan ja helpottaa kuluttajien arkea, sillä Rinki-pisteet sijaitsevat kauppa- ja palvelukeskittymissä, joissa kuluttajat muutenkin päivittäin asioivat.</p>
+<p>Me Encore Palveluissa tarjoamme kaikille tuottajavastuullisille palvelun aina materiaalin käsittelystä sen keräämiseen. Avullamme tuottajayhteisöt voivat tehokkaasti ja luotettavasti huolehtia oman vastuualueensa jätehuollon toteutumisesta jätelain määräysten mukaisesti.</p>
 
-<p>Uudessa jätelaissakin on vielä hiomista muun muassa tuottajavastuun toteuttamiseen liittyvien oikeuksien ja velvollisuuksien osalta. Nykyoloissa Paperinkeräys ei yllä keräyspaperille määritettyyn 75 prosentin talteenottotavoitteeseen.</p>
+<h2>Valtakunnallinen kumppanuusverkosto</h2>
 
-<p>Kotikeräyspaperin tuottajavastuun toteuttaminen kannattavasti on haasteellista suurten etäisyyksien Suomessa. Lisämutkia tuo digitalisaatio, joka syö graafisen paperin volyymia. Kerättävän paperin määrä on lähes puolittunut vuoteen 2008 verrattuna ja laskee yhä kymmenisen prosenttia vuodessa. Koska laki kuitenkin edellyttää taajamakohtaisten aluekeräyspisteiden järjestämistä sekä asemakaava-alueella lisäksi kiinteistökohtaista keräysverkostoa, uudenlaisia ratkaisuja on löydettävä.</p>
+<p>Osaamisemme valtakunnallisessa tuottajavastuukeräyksen järjestämisessä on ainutlaatuista – tarjoamme sitä kaikille tuottajavastuullisille aina materiaalin käsittelystä sen keräämiseen tuottajayhteisön puolesta. Yhdessä tuomme vuosittain valtavan määrän jätettä kierrätykseen ja hyötykäyttöön vuosittain.</p>
 
-<p>Paperinkeräys onkin aloittamassa yhteistoimintakokeilua vastaavasta, mutta käänteisestä ongelmasta kärsivän Postin kanssa. Haja-asutusalueiden kotitalouksille jaetaan keräyspaperia varten kassit, jotka postinkuljettaja poimii mukaansa tiettyinä päivinä, vie toimipaikkaan tyhjennettäväksi ja palauttaa takaisin seuraavana päivänä. Palvelua testataan toukokuussa Mäntsälässä ja Pieksämäellä.</p>
+<p>Paperinkeräyksen yhteistyökumppaneina ja alihankkijoina keräys- ja kuljetusketjussa on keräysliikkeitä kaikkialla Suomessa. Olemme valtakunnallisen verkostomme kattavuuden ansiosta kierrätyksen ja jätehuollon kumppani usealle tuottajayhteisölle. Tarjoamme osaamistamme sinunkin edustamallesi tuottajayhteisölle.</p>
+
+<strong>Palvelumme kautta kierrätät tehokkaasti</strong>
+<br><br>
+<ul>
+<li>painopaperit ja painetut paperituotteet</li>
+<li>pakkaukset (paperi, kartonki, puu, lasi, metalli, muovi)</li>
+<li>moottorikäyttöisten ajoneuvojen ja laitteiden renkaat</li>
+<li>sähkö- ja elektroniikkalaitteet</li>
+</ul>
 
 
 <div class="newsletter-link"><a href="http://www.paperinkerays.fi/tuottajayhteisoille/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
