--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -59,7 +59,7 @@ title: Jätehuolto |
 
 <p>Encore Jätehuoltopalvelu on yritysten jätteiden kierrättämisen älykäs osaaja, jolle yritykset voivat ulkoistaa koko jätehuoltonsa.</p>
 
-<p>Vastaamme digitalisaation ja paperijätteen vähenemisen myötä syntyneisiin kierrätyshaasteisiin. Encoren palvelu ei ole pelkkää kuitujenkierrättämistä, vaan tarjoamme räätälöityjä ratkaisuja kaikkiin asiakkaidemme jätehuoltotarpeisiin.</p>
+<p>Vastaamme digitalisaation ja paperijätteen vähenemisen myötä syntyneisiin kierrätyshaasteisiin. Encoren palvelu ei ole pelkkää paperinkeräämistä, vaan tarjoamme räätälöityjä ratkaisuja kaikkiin asiakkaidemme jätehuoltotarpeisiin.</p>
 
 <p>Olemme läsnä paikallisesti, sillä meillä ei ole omaa kuljetuskalustoa, vaan toimintamallimme perustuu yhteistyöhön kuljetuskumppaneiden ja urakoitsijoiden kanssa. Tuemme paikallista työvoimaa järjestämällä logistiikan kumppaniyritysten kanssa jokaisessa 20 Encore-yksikössämme eri puolella maata.</p>
 
