Text changes + added class for excerpts

--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -54,7 +54,7 @@ title: Kuormalava |
 
 	<div class="columns small-12 medium-6 content-text">
 
-<p>Encore uudistaa älykkäästi koko lavatoimialaa ja takaa asiakkailleen puhtaat ja hyväkuntoiset lavat aina kun asiakas lavoja tarvitsee.</p>
+<p class="excerpt">Encore uudistaa älykkäästi koko lavatoimialaa ja takaa asiakkailleen puhtaat ja hyväkuntoiset lavat aina kun asiakas lavoja tarvitsee.</p>
 
 <p>Encore-vuokralavat on oma vihreä tuoteperheemme. Lavan tarve huomataan yleensä siinä vaiheessa, kun se puuttuu. Vuokralavoihin perustuvassa toimintamallissamme lavoja on aina saatavilla. Kun lavat eivät jää seisomaan varastoihin, säästää asiakas myös tilaa.</p>
 
