Text changes + new PDF for 'Tuottajavastuu'

--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -72,7 +72,7 @@ title: Kuormalava |
 
 <p>Encoren tavoitteena on olla alan joustavin ja kustannustehokkain toimija. Emme sovita asiakasta sapluunaan, vaan sapluunan asiakkaaseen.</p>
 
-<p>Kumppaniyrityksemme ovat meille tärkeitä. Seurantajärjestelmäämme on ollut kanssamme kehittämässä GS1.</p>
+<p>Kumppaniyrityksemme ovat meille tärkeitä. Seurantajärjestelmäämme on ollut kanssamme kehittämässä Vilant Systems sekä toimitusketjujen digitalisointia GS1 Finland.</p>
 
 <h2>Tulevaisuuden toimitusketju on ekologinen</h2>
 
