--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -78,7 +78,7 @@ Tehtävämme on myös pitää asiakas kärryillä prosessin kulusta. Haluamme sa
 
 <p>Tietoturvapalveluiden tarve muuttuu ja kehittyy. Haluamme olla kekseliäs  ympäristökumppani myös tulevaisuudessa. Pelkällä paperinsilppuamisella ei enää pärjää. Esimerkiksi sähkö- ja elektroniikkaromun kuten kovalevyjen ja USB-tikkujen asianmukainen ja luotettava hävittäminen murskaamalla on tärkeä osa toimintaamme. Encore Tietoturvapalveluun sisältyy lupaus kokonaisvaltaisesta tietoturva-aineistojen turvallisesta tuhoamisesta.</p>
 
-<p>Olemme kiinnostuneita kehittämään kierrätysratkaisuja, joita alalla ei vielä ole nähty – haluamme olla kierrätyksen aallonharjalla. Jos tuhoamiskeinoa ei vielä ole olemassa, keksimme sen. Kierrätys on aina toimintamme ytimessä. Tietoturvajätteestä syntyvä paperisilppu päätyy pehmopaperituotannon raaka-aineeksi.</p>
+<p>Kehitämme kierrätysratkaisuja, joita alalla ei vielä ole nähty – haluamme olla kierrätyksen aallonharjalla. Jos tuhoamiskeinoa ei vielä ole olemassa, keksimme sen. Kierrätys on aina toimintamme ytimessä. Tietoturvajätteestä syntyvä paperisilppu päätyy pehmopaperituotannon raaka-aineeksi.</p>
 
 <p>Uusien ratkaisujen löytäminen on myös henkilökohtainen tavoitteeni. Joskus ratkaisut tulevat läheltä. Kollegani kehitti prosessin rekisterikilpien turvalliseen kierrättämiseen. Nyt niitä otetaan vastaan, tuhotaan ja kierrätetään materiaalina yhteistyössä kumppanimme kanssa.</p>
 
