Changes to footer and infogr buttons

--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -15,8 +15,8 @@ title: Tuottajavastuu |
 		<div class="columns small-12 link-box">
 <a href="/assets/pdf/Paperinkerays_infogr_tuottajavastuu.pdf" target="_blank">
 
-		<div class="link-box-content infografiikka">
-			<span>Katso infografiikka</span>
+		<div class="link-box-content infografiikka pk-infogr-link">
+			<span>Katso paperinkeräyksen infografiikka</span>
 			<span class="image-icon"></span>
 		</div>
 </a>
@@ -44,13 +44,13 @@ title: Tuottajavastuu |
 
 	<div class="columns small-12 medium-6 content-text">
 
-<p class="excerpt">Suomen lainsäädäntö asettaa yrityksille ja yhteisöille velvoitteet huolehtia syntyvän jätteen kierrätyksestä ja hyötykäytöstä. Tuottajan velvollisuus huolehtia markkinoille luovuttamiensa tuotteiden ja niistä syntyvän jätteen uudelleenkäytön, hyödyntämisen ja muun jätehuollon järjestämisestä sekä tästä aiheutuvista kustannuksista.</p>
+<p class="excerpt">Suomen lainsäädäntö asettaa yrityksille ja yhteisöille velvoitteet huolehtia syntyvän jätteen kierrätyksestä ja hyötykäytöstä. Tuottajan velvollisuus on huolehtia markkinoille luovuttamiensa tuotteiden ja niistä syntyvän jätteen uudelleenkäytön, hyödyntämisen ja muun jätehuollon järjestämisestä sekä tästä aiheutuvista kustannuksista.</p>
 
 <p>Me Encore Palveluissa tarjoamme kaikille tuottajavastuullisille palvelun aina materiaalin käsittelystä sen keräämiseen. Avullamme tuottajayhteisöt voivat tehokkaasti ja luotettavasti huolehtia oman vastuualueensa jätehuollon toteutumisesta jätelain määräysten mukaisesti.</p>
 
 <h2>Valtakunnallinen kumppanuusverkosto</h2>
 
-<p>Osaamisemme valtakunnallisessa tuottajavastuukeräyksen järjestämisessä on ainutlaatuista – tarjoamme sitä kaikille tuottajavastuullisille aina materiaalin käsittelystä sen keräämiseen tuottajayhteisön puolesta. Yhdessä tuomme vuosittain valtavan määrän jätettä kierrätykseen ja hyötykäyttöön vuosittain.</p>
+<p>Osaamisemme valtakunnallisessa tuottajavastuukeräyksen järjestämisessä on ainutlaatuista – tarjoamme sitä kaikille tuottajavastuullisille aina materiaalin käsittelystä sen keräämiseen tuottajayhteisön puolesta. Yhdessä tuomme vuosittain valtavan määrän jätettä kierrätykseen ja hyötykäyttöön.</p>
 
 <p>Paperinkeräyksen yhteistyökumppaneina ja alihankkijoina keräys- ja kuljetusketjussa on keräysliikkeitä kaikkialla Suomessa. Olemme valtakunnallisen verkostomme kattavuuden ansiosta kierrätyksen ja jätehuollon kumppani usealle tuottajayhteisölle. Tarjoamme osaamistamme sinunkin edustamallesi tuottajayhteisölle.</p>
 
