Fixed couple of PDF links

--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -14,7 +14,7 @@ title: Kuormalava |
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
 
-<a href="/assets/pdf/Paperinkerays_infogr_kuormalavapalvelu.pdf" target="_blank">
+<a href="http://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_kuormalavapalvelu_asiakasnakokulma_2017_v03-copy.pdf" target="_blank">
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
 			<span class="image-icon"></span>
