--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -13,7 +13,7 @@ title: Tuottajavastuu |
 
 		<div class="row">
 		<div class="columns small-12 link-box">
-<a href="/assets/pdf/Paperinkerays_infogr_tuottajavastuu.pdf" target="_blank">
+<a href="http://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_infogr_tuottajavastuu_asiakasnakokulma_2017_v02.pdf" target="_blank">
 
 		<div class="link-box-content infografiikka pk-infogr-link">
 			<span>Katso paperinkeräyksen infografiikka</span>
