--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -36,7 +36,7 @@
 	
 		<div class="columns small-12 medium-4 kokonaisuus">
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/_HYA_iWvTGs?rel=0&autoplay=1&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="https://www.youtube.com/embed/_HYA_iWvTGs?rel=0&autoplay=1&amp;wmode=transparent">
 			<img src="assets/img/jatehuolto-icon.png" alt="Katso jätehuolto-video">
 		</a>
 	
@@ -45,7 +45,7 @@
 	
 		<div class="columns small-12 medium-4 kokonaisuus">
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/0mWzPsY-xEc?rel=0&autoplay=1&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="https://www.youtube.com/embed/0mWzPsY-xEc?rel=0&autoplay=1&amp;wmode=transparent">
 			<img src="assets/img/tietoturva-icon.png" alt="Katso tietoturva-video">
 		</a>
 
@@ -56,7 +56,7 @@
 	
 		<div class="columns small-12 medium-4 kokonaisuus">
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/BqqQaEMY97A?rel=0&autoplay=1&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="https://www.youtube.com/embed/BqqQaEMY97A?rel=0&autoplay=1&amp;wmode=transparent">
 			<img src="assets/img/kuormalava-icon.png" alt="Katso kuormalava-video">
 		</a>
 		
@@ -86,7 +86,7 @@
 	
 		<p>Oli kyse sitten pahvista, paperista, puusta, muovista, lasista tai sähkö- ja elektroniikkaromusta, palvelemme sinun ja yrityksesi tarpeita valtakunnallisesti. Kuluttajapuolella tunnet meidät nimellä Paperinkeräys, yritysjätteen palvelumme löytyvät Encore Palveluiden alta.</p>
 	
-		<a href="http://www.paperinkerays.fi/yritys/" target="_blank" class="lue-lisaa">Tutustu toimintaamme <span>&raquo;</span></a>
+		<a href="https://www.paperinkerays.fi/yritys/" target="_blank" class="lue-lisaa">Tutustu toimintaamme <span>&raquo;</span></a>
 	</div>
 	</div><!--/organisaatio-->
 
