--- a/src/pages/jatehuolto.html
+++ b/src/pages/jatehuolto.html
@@ -13,7 +13,7 @@ title: Jätehuolto |
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
 		
-<a href="http://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_infogr_jatehuoltopalvelu_asiakasnakokulma_2017_v02.pdf" target="_blank">
+<a href="https://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_infogr_jatehuoltopalvelu_asiakasnakokulma_2017_v02.pdf" target="_blank">
 
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
@@ -22,7 +22,7 @@ title: Jätehuolto |
 </a>
 		</div>
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/_HYA_iWvTGs?rel=0&autoplay=1&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="https://www.youtube.com/embed/_HYA_iWvTGs?rel=0&autoplay=1&amp;wmode=transparent">
 			<div class="columns small-12 medium-6 link-box">
 				<div class="link-box-content video">
 					<span>Katso video</span>
@@ -82,7 +82,7 @@ title: Jätehuolto |
 <p>Kehitämme jätehuoltoa jatkuvasti ympäristön ja asiakkaiden hyväksi. Encore haluaa ehdottomasti olla edelläkävijä myös tulevaisuudessa.</p>
 
 
-<div class="newsletter-link"><a href="http://www.paperinkerays.fi/yrityksille/encore-jatehuoltopalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
+<div class="newsletter-link"><a href="https://www.paperinkerays.fi/yrityksille/encore-jatehuoltopalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
 
 
 
