--- a/src/pages/kuormalava.html
+++ b/src/pages/kuormalava.html
@@ -14,7 +14,7 @@ title: Kuormalava |
 		<div class="row">
 		<div class="columns small-12 medium-6 link-box">
 
-<a href="http://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_kuormalavapalvelu_asiakasnakokulma_2017_v03-copy.pdf" target="_blank">
+<a href="https://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_kuormalavapalvelu_asiakasnakokulma_2017_v03-copy.pdf" target="_blank">
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
 			<span class="image-icon"></span>
@@ -22,7 +22,7 @@ title: Kuormalava |
 </a>
 		</div>
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/BqqQaEMY97A?rel=0&autoplay=1&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="https://www.youtube.com/embed/BqqQaEMY97A?rel=0&autoplay=1&amp;wmode=transparent">
 			<div class="columns small-12 medium-6 link-box">
 				<div class="link-box-content video">
 					<span>Katso video</span>
@@ -79,7 +79,7 @@ title: Kuormalava |
 <p>Seurattavuus, ekologisuus ja joustavuus ovat lavatoiminnan tulevaisuutta. Tehtävämme on varmistaa, että asiakkaalla on lava, josta se saa omaa toimintaansa tukevaa tietoa edullisesti ja vaivattomasti. Vuokralavamallissa lavat säilyvät paremmassa kunnossa ja jätteen määrä vähenee. Tälle pohjalle rakennamme tulevaisuuden toimitusketjua.</p>
 
 
-<div class="newsletter-link"><a href="http://www.paperinkerays.fi/yrityksille/encore-kuormalavapalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
+<div class="newsletter-link"><a href="https://www.paperinkerays.fi/yrityksille/encore-kuormalavapalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
 
 	</div><!--/content-text-->
 
