--- a/src/pages/tietoturva.html
+++ b/src/pages/tietoturva.html
@@ -13,7 +13,7 @@ title: Tietoturva |
 
 		<div class="row">
 
-<a href="http://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_infogr_tietoturva_asiakasnakokulma_2017_v04.pdf" target="_blank">
+<a href="https://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_infogr_tietoturva_asiakasnakokulma_2017_v04.pdf" target="_blank">
 		<div class="columns small-12 medium-6 link-box">
 		<div class="link-box-content infografiikka">
 			<span>Katso infografiikka</span>
@@ -22,7 +22,7 @@ title: Tietoturva |
 </a>
 		</div>
 
-		<a class="youtube cboxElement" href="http://www.youtube.com/embed/0mWzPsY-xEc?rel=0&autoplay=1&amp;wmode=transparent">
+		<a class="youtube cboxElement" href="https://www.youtube.com/embed/0mWzPsY-xEc?rel=0&autoplay=1&amp;wmode=transparent">
 			<div class="columns small-12 medium-6 link-box">
 				<div class="link-box-content video">
 					<span>Katso video</span>
@@ -85,7 +85,7 @@ Tehtävämme on myös pitää asiakas kärryillä prosessin kulusta. Haluamme sa
 <p>Osaamisella ja uudistumiskyvyllä ansaitsemme asiakkaiden luottamuksen.</p>
 
 
-<div class="newsletter-link"><a href="http://www.paperinkerays.fi/yrityksille/encore-tietoturvapalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
+<div class="newsletter-link"><a href="https://www.paperinkerays.fi/yrityksille/encore-tietoturvapalvelu/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
 
 	</div><!--/content-text-->
 
