--- a/src/pages/tuottajavastuu.html
+++ b/src/pages/tuottajavastuu.html
@@ -13,7 +13,7 @@ title: Tuottajavastuu |
 
 		<div class="row">
 		<div class="columns small-12 link-box">
-<a href="http://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_infogr_tuottajavastuu_asiakasnakokulma_2017_v02.pdf" target="_blank">
+<a href="https://frantic.s3.amazonaws.com/paperinkerays/Paperinkerays_infogr_tuottajavastuu_asiakasnakokulma_2017_v02.pdf" target="_blank">
 
 		<div class="link-box-content infografiikka pk-infogr-link">
 			<span>Katso paperinkeräyksen infografiikka</span>
@@ -63,7 +63,7 @@ title: Tuottajavastuu |
 </ul>
 
 
-<div class="newsletter-link"><a href="http://www.paperinkerays.fi/tuottajayhteisoille/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
+<div class="newsletter-link"><a href="https://www.paperinkerays.fi/tuottajayhteisoille/" target="_blank">Tutustu palveluumme &raquo;</a></div><!--/newsletter-button-->
 
 	</div><!--/content-text-->
 
